Added updates to tests