@@ -8,6 +8,7 @@ import uk.gov.hmcts.reform.civil.callback.Callback;
 import uk.gov.hmcts.reform.civil.callback.CallbackHandler;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
 import uk.gov.hmcts.reform.civil.callback.CaseEvent;
+import uk.gov.hmcts.reform.civil.enums.MultiPartyScenario;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.notify.NotificationService;
 import uk.gov.hmcts.reform.civil.notify.NotificationsProperties;
@@ -16,13 +17,18 @@ import uk.gov.hmcts.reform.civil.service.OrganisationService;
 import uk.gov.hmcts.reform.civil.service.querymanagement.QueryManagementCamundaService;
 import uk.gov.hmcts.reform.civil.service.querymanagement.QueryManagementVariables;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_SUBMIT;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.NOTIFY_OTHER_PARTY_FOR_RAISED_QUERY;
-import static uk.gov.hmcts.reform.civil.callback.CaseEvent.NOTIFY_OTHER_PARTY_FOR_RAISED_QUERY_TWO_REPS;
+import static uk.gov.hmcts.reform.civil.enums.MultiPartyScenario.ONE_V_ONE;
+import static uk.gov.hmcts.reform.civil.enums.MultiPartyScenario.ONE_V_TWO_ONE_LEGAL_REP;
+import static uk.gov.hmcts.reform.civil.enums.MultiPartyScenario.ONE_V_TWO_TWO_LEGAL_REP;
+import static uk.gov.hmcts.reform.civil.enums.MultiPartyScenario.TWO_V_ONE;
+import static uk.gov.hmcts.reform.civil.enums.MultiPartyScenario.getMultiPartyScenario;
 import static uk.gov.hmcts.reform.civil.handler.callback.camunda.notification.NotificationData.CASEMAN_REF;
 import static uk.gov.hmcts.reform.civil.handler.callback.camunda.notification.NotificationData.CLAIM_LEGAL_ORG_NAME_SPEC;
 import static uk.gov.hmcts.reform.civil.handler.callback.camunda.notification.NotificationData.CLAIM_REFERENCE_NUMBER;
@@ -37,12 +43,10 @@ import static uk.gov.hmcts.reform.civil.utils.QueryNotificationUtils.isOtherPart
 @RequiredArgsConstructor
 public class NotifyOtherPartyQueryRaisedNotificationHandler extends CallbackHandler {
 
-    private static final List<CaseEvent> EVENTS = List.of(NOTIFY_OTHER_PARTY_FOR_RAISED_QUERY,
-                                                          NOTIFY_OTHER_PARTY_FOR_RAISED_QUERY_TWO_REPS);
+    private static final List<CaseEvent> EVENTS = Collections.singletonList(NOTIFY_OTHER_PARTY_FOR_RAISED_QUERY);
 
-    public static final String TASK_ID_ONE_REP = "NotifyOtherPartyQueryRaised";
-    public static final String TASK_ID_TWO_REPS = "NotifyOtherPartyQueryRaisedTwoReps";
-    private static final String REFERENCE_TEMPLATE = "query-raised-notification-%s";
+    public static final String TASK_ID = "NotifyOtherPartyQueryRaised";
+    private static final String REFERENCE_TEMPLATE = "a-query-has-been-raised-notification-%s";
 
     private final NotificationService notificationService;
     private final NotificationsProperties notificationsProperties;
@@ -52,11 +56,7 @@ public class NotifyOtherPartyQueryRaisedNotificationHandler extends CallbackHand
 
     @Override
     public String camundaActivityId(CallbackParams callbackParams) {
-        if (callbackParams.getRequest().getEventId().equals(NOTIFY_OTHER_PARTY_FOR_RAISED_QUERY.name())) {
-            return TASK_ID_ONE_REP;
-        } else {
-            return TASK_ID_TWO_REPS;
-        }
+        return TASK_ID;
     }
 
     @Override
@@ -72,9 +72,12 @@ public class NotifyOtherPartyQueryRaisedNotificationHandler extends CallbackHand
         QueryManagementVariables processVariables = runtimeService.getProcessVariables(processInstanceId);
         String queryId = processVariables.getQueryId();
         List<String> roles = getUserRoleForQuery(caseData, coreCaseUserService, queryId);
+        MultiPartyScenario multiPartyScenario = getMultiPartyScenario(caseData);
 
-        if (camundaActivityId(callbackParams).equals(TASK_ID_ONE_REP)) {
-            // When 1v1, or 1v2 same solicitor, "other party" will either be applicant 1, or respondent 1
+        System.out.println("MULTI PART SCENARIO IS " + multiPartyScenario);
+
+        if (multiPartyScenario.equals(ONE_V_ONE) || multiPartyScenario.equals(TWO_V_ONE) || multiPartyScenario.equals(ONE_V_TWO_ONE_LEGAL_REP)) {
+            // When 1v1, 2v1,  or 1v2 same solicitor, "other party" will either be applicant 1, or respondent 1
             String email = isOtherPartyApplicant(roles) ?
                 caseData.getApplicantSolicitor1UserDetails().getEmail() :
                 caseData.getRespondentSolicitor1EmailAddress();
@@ -88,7 +91,7 @@ public class NotifyOtherPartyQueryRaisedNotificationHandler extends CallbackHand
                 addProperties(caseData, legalOrgName),
                 String.format(REFERENCE_TEMPLATE, caseData.getLegacyCaseReference())
             );
-        } else if (isOtherPartyApplicant(roles) && camundaActivityId(callbackParams).equals(TASK_ID_TWO_REPS)) {
+        } else if (isOtherPartyApplicant(roles) && multiPartyScenario.equals(ONE_V_TWO_TWO_LEGAL_REP)) {
             // 1v2 different solicitor, and when "other party" is applicant 1.
             String applicantEmail = caseData.getApplicantSolicitor1UserDetails().getEmail();
             String legalOrgName = getApplicantLegalOrganizationName(caseData, organisationService);
@@ -99,7 +102,7 @@ public class NotifyOtherPartyQueryRaisedNotificationHandler extends CallbackHand
                 addProperties(caseData, legalOrgName),
                 String.format(REFERENCE_TEMPLATE, caseData.getLegacyCaseReference())
             );
-        } else if (!isOtherPartyApplicant(roles) && camundaActivityId(callbackParams).equals(TASK_ID_TWO_REPS)) {
+        } else if (!isOtherPartyApplicant(roles) && multiPartyScenario.equals(ONE_V_TWO_TWO_LEGAL_REP)) {
             // 1v2 different solicitor, and when "other party" is respondent 1 AND respondent 2.
             String emailRep1 = caseData.getRespondentSolicitor1EmailAddress();
             String emailRep2 = caseData.getRespondentSolicitor2EmailAddress();
